# dev-agents

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: queue.example.txt  run-queue-overnight.sh  serve-ui-tailscale.sh
src/dev_agents/: __init__.py  chat.py  cli.py  config.py  diff_extract.py  git_pr.py  ollama_net.py  patch_apply.py  queue_run.py  tools_workspace.py  workspace.py
src/dev_agents/graphs/: __init__.py  code_plan.py  coder_react.py  hello.py
ui/: app.py
