[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-agents"
version = "0.1.0"
description = "Shared LangGraph + Ollama agents for local homelab repos (not production stack code)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "httpx>=0.25",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
dev-agents = "dev_agents.cli:main"

[project.optional-dependencies]
dev = ["ruff>=0.8"]

[tool.ruff]
line-length = 100
target-version = "py310"
